trying to fix that error